--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <body>
     <header>
       <a href="index.html">WebStudio</a>
-      <ul>
-        <li>Agencja</li>
-        <li>Portfolio</li>
-        <li>Kontakt</li>
-      </ul>
+      <nav>
+        <ul>
+          <li>Agencja</li>
+          <li>Portfolio</li>
+          <li>Kontakt</li>
+        </ul>
+      </nav>
       <ul>
         <li>info@devstudio.com</li>
         <li>+48 111 111 111</li>
@@ -58,13 +60,30 @@
       <h2>Czym się zajmujemy</h2>
       <ul>
         <li>
-          <img src="images/about.png" alt="osoba pracująca przy komputerze" />
+          <img
+            src="images/about.jpg"
+            width="370"
+            height="294"
+            alt="osoba
+          pracująca przy komputerze"
+          />
         </li>
         <li>
-          <img src="images/about2.png" alt="osoba ze smartfonem w ręku" />
+          <img
+            src="images/about2.jpg"
+            width="370"
+            height="294"
+            alt="osoba ze
+          smartfonem w ręku"
+          />
         </li>
         <li>
-          <img src="images/about3.png" alt="osoba z tabletem w ręku" />
+          <img
+            src="images/about3.jpg"
+            width="370"
+            height="294"
+            alt="osoba z tabletem w ręku"
+          />
         </li>
       </ul>
     </section>
@@ -72,37 +91,65 @@
       <h2>Nasz zespół</h2>
       <ul>
         <li>
-          <img src="images/team.jpg" alt="uśmiechnięty mężczyzna w okularach" />
+          <img
+            src="images/team.jpg"
+            width="270"
+            height="260"
+            alt="uśmiechnięty mężczyzna w okularach"
+          />
+          <h3>John Doe</h3>
+          <p>Product Designer</p>
         </li>
         <li>
-          <img src="images/team2.jpg" alt="uśmiechnięta kobieta w okularach" />
+          <img
+            src="images/team2.jpg"
+            width="270"
+            height="260"
+            alt="uśmiechnięta kobieta w okularach"
+          />
+          <h3>John Doe</h3>
+          <p>Frontend Developer</p>
         </li>
         <li>
           <img
             src="images/team3.jpg"
+            width="270"
+            height="260"
             alt="uśmiechnięty mężczyzna w niebieskiej koszuli"
           />
+          <h3>John Doe</h3>
+          <p>Marketing</p>
         </li>
         <li>
           <img
             src="images/team4.jpg"
+            width="270"
+            height="260"
             alt="uśmiechnięty mężczyzna w okularach w czarnym podkoszulku"
           />
+          <h3>John Doe</h3>
+          <p>UI Designer</p>
         </li>
       </ul>
     </section>
     <footer>
       WebStudio
       <ul>
-        <li>m. Warszawa, Aleje Jerozolimskie 21</li>
+        <li>
+          <address>Warszawa, Aleje Jerozolimskie 21</address>
+        </li>
         <li>
           <span class="bold">E:</span>
           <a class="contact-links" href="mailto:info@example.com"
-          >info@example.com</a> </li>
-        <li><a clas="contact-links" href="tel:+48 111 111 111"></a> +48 111 111 111</a></li>
+            >info@example.com</a
+          >
+        </li>
+        <li>
+          <a class="contact-links" href="tel:+48 111 111 111">
+            +48 111 111 111</a
+          >
+        </li>
       </ul>
     </footer>
   </body>
 </html>
-
-
