--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           >
         </li>
         <li>
-          <a class="contact-links" href="tel:+48 111 111 111">
+          <a class="contact-links" href="tel:+48111111111">
             +48 111 111 111</a
           >
         </li>
